2005-06-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Patch from Paolo Borelli to fix a leaked string.

2005-05-09  Alan Horkan <horkana tcd ie>

	* help/C/glines.xml: Removed Known Bugs sections where not needed.

2005-04-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: 	
	* glines.xml: Muck around with the labels again: now items are
	objects and the documentation has been updated to reflect this and
	other recent changes. Also fix a default filename.

2005-04-08  Marco Colombo  <m.colombo@ed.ac.uk>

	* glines.c: Generalize the remaining label that was assuming that
	the items to match are balls (Bug 172907).

2005-04-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Further reworking of the layout code to avoid cutting
	the text at the top. The table now gets resized to match the
	logical layout rather than using the 100-unit layout.

2005-04-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Convert to using GRand rather than rand. Remove some
	necessary includes (and convert some from "" -> <>). Inspired by
	bug #172376 from Marco Colombo.

	* glines.c:
	* glines.h: Move non-externed variable declarations out of the
	header.

	* glines.c: Evil code to rearrange the main layout table when the
	game size changes so that the preview doesn't get too big (Bug 172359).

2005-03-31  Richard Hoelscher  <rah@rahga.com>

	* glines.c (fullscreen_callback): Leave setting of the fullscreen
	actions visibility to the callback that handles window state events.

2005-03-30  Richard Hoelscher  <rah@rahga.com>

	* glines.c: Use games-stock in menu items.
	(main): Call games-stock-init().
	(set_fullscreen_actions): New, seperate Fullscreen/Leave items.

2005-03-24  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* glines.c:  Use Header capitalization for category titles.
 	
2005-03-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Fullscreen patch from Marco Colombo.
