@@ -1,3 +1,7 @@
+2005-06-24  Richard Hoelscher  <rah@rahga.com>
+
+	* glines.c (set_statusbar_message): Use GtkStatusbar, not GnomeAppBar.
+
 2005-06-28  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* glines.c: Patch from Paolo Borelli to fix a leaked string.
